--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
+    "react-swiper": "^0.1.5",
     "redux-persist": "^6.0.0",
     "swiper": "^11.0.5"
   },
